[project]
name = "flask-pwa-secure-template"
version = "0.1.0"
description = "Secure, modern Flask PWA template for NESA Software Engineering syllabus"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }

dependencies = [
  "flask",
  "flask-wtf",
  "flask-login",
  "flask-talisman",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "wtforms",
  "gunicorn",
  "jinja2",
  "python-dotenv",
  "itsdangerous",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "bandit",
  "semgrep",
  "pip-audit",
  "lxml",         # Wapiti dependency
  "types-requests"
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["E203", "W503"]
exclude = ["migrations"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=xml"
testpaths = ["tests"]

[tool.bandit]
skips = ["B101"]  # example: assert warnings

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
